News Method Adding

--- a/public/mycss.css
+++ b/public/mycss.css
@@ -83,6 +83,9 @@ div.flexdiv3{
     width: 1030px;
     margin-left:1em;
 }
+.highlight-title-2{
+    width: 150px;
+}
 /*clubinfopage*/
 img.stadium-photo{ /*for sometime case*/
     width:100%;
